--- a/public/index.html
+++ b/public/index.html
@@ -10,29 +10,28 @@
 html,body{width:100%;height:100%;font-family:'Archivo',sans-serif;background:linear-gradient(135deg,#0d0e1a,#1a1c2d);overflow:hidden;transition:background 1s ease;perspective:1200px}
 body.dark{background:#000}
 .main{height:100dvh;display:flex;flex-direction:column;opacity:0;animation:fadeIn 1.5s ease forwards}
-.grid{flex:1;display:grid;gap:1vw;padding:2vw;grid-template-columns:1fr 1fr;grid-template-rows:1fr 1fr;min-height:0}
+.grid{flex:1;display:grid;gap:2vw;padding:2vw;grid-template-columns:1fr 1fr;grid-template-rows:1fr 1fr}
 @media(orientation:landscape){.grid{grid-template-columns:repeat(4,1fr);grid-template-rows:1fr}}
-.block{display:flex;justify-content:center;align-items:center;text-align:center;border-radius:20px;font-weight:bold;font-size:clamp(1.1rem,2vw,1.5rem);color:white;background-size:cover;background-position:center;cursor:pointer;transition:.5s;overflow:hidden;transform:scale(.95);opacity:0;animation:scaleFadeIn 1.6s forwards;position:relative;padding:10px;min-height:0;max-height:240px}
-.block-content{position:absolute;inset:0;display:flex;justify-content:center;align-items:center;padding:10px;text-align:center;word-break:break-word}
+.block{display:flex;justify-content:center;align-items:center;text-align:center;border-radius:18px;font-weight:bold;font-size:1.1rem;color:white;background-size:cover;background-position:center;cursor:pointer;transition:.5s;overflow:hidden;transform:scale(.95);opacity:0;animation:scaleFadeIn 1.6s forwards;position:relative;padding:10px;min-height:0}
+.block-content{position:absolute;inset:0;display:flex;justify-content:center;align-items:center;padding:14px;text-align:center;word-break:break-word}
 .label{z-index:1}
-.accionable{color:white;font-family:'Poppins',sans-serif;font-size:clamp(1.05rem,2vw,1.3rem);font-weight:600;padding:14px;border-radius:20px;opacity:0;animation:aparecer .6s forwards;text-align:center;box-shadow:0 8px 30px rgba(0,0,0,.3)}
+.accionable{color:white;font-family:'Poppins',sans-serif;font-size:1rem;font-weight:600;padding:16px;border-radius:16px;opacity:0;animation:aparecer .6s forwards;text-align:center;box-shadow:0 8px 30px rgba(0,0,0,.3)}
 .portada-wrapper{width:100%;height:100%;display:flex;justify-content:center;align-items:center;background:transparent;transform-style:preserve-3d;animation:flotarRespirarTilt 8s ease-in-out infinite}
-.portada-wrapper img{width:88%;height:auto;object-fit:cover;border-radius:22px;box-shadow:0 12px 30px rgba(0,0,0,.4);transition:transform .6s}
+.portada-wrapper img{width:88%;max-height:92%;object-fit:cover;border-radius:22px;box-shadow:0 12px 30px rgba(0,0,0,.4);transition:transform .6s}
 .portada-wrapper img:hover{transform:scale(1.06) rotateY(6deg) rotateX(3deg)}
-.footer{display:flex;flex-direction:column;align-items:center;justify-content:flex-start;padding:1vh 2vw;min-height:110px}
-.shock{background:linear-gradient(135deg,#ff0080,#7928ca);color:white;font-weight:bold;border:none;border-radius:30px;padding:14px 26px;margin-top:8px;font-size:clamp(1rem,2vw,1.4rem);cursor:pointer;box-shadow:0 0 18px rgba(255,105,180,.6);animation:pulse 2s infinite;max-width:90%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
-.final-message{color:white;font-size:clamp(1.1rem,2vw,1.5rem);text-align:center;opacity:0;animation:fadeIn 2s forwards;margin-top:6px;font-family:'Poppins',sans-serif}
-.trigguiletras{height:26px;opacity:.9;margin-top:6px;transition:opacity .4s}
+.footer{display:flex;flex-direction:column;align-items:center;justify-content:flex-start;padding:2vh;min-height:100px}
+.shock{background:linear-gradient(135deg,#ff0080,#ff8c00);color:white;font-weight:bold;border:none;border-radius:30px;padding:14px 26px;margin-top:6px;font-size:1.1rem;cursor:pointer;box-shadow:0 0 18px rgba(255,105,180,.6);animation:pulse 2s infinite;max-width:90%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
+.final-message{color:white;font-size:1.1rem;text-align:center;opacity:0;animation:fadeIn 2s forwards;margin-top:8px;font-family:'Poppins',sans-serif}
+.trigguiletras{height:24px;opacity:.9;margin-top:6px;transition:opacity .4s}
 .hidden{display:none!important}
-.bg1{background:linear-gradient(135deg,#ff0080,#ff8c00)}
-.bg2{background:linear-gradient(135deg,#00f260,#0575e6)}
-.bg3{background:linear-gradient(135deg,#fc466b,#3f5efb)}
-.bg4{background:linear-gradient(135deg,#f12711,#f5af19)}
-.colorful{background:linear-gradient(45deg,#ff0080,#ff8c00);-webkit-background-clip:text;color:transparent}
+.bg1{background:linear-gradient(135deg,#ff6b6b,#f7b733)}
+.bg2{background:linear-gradient(135deg,#00c3ff,#ffff1c)}
+.bg3{background:linear-gradient(135deg,#d53369,#daae51)}
+.bg4{background:linear-gradient(135deg,#12c2e9,#c471ed,#f64f59)}
 @keyframes fadeIn{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
 @keyframes scaleFadeIn{to{transform:scale(1);opacity:1}}
 @keyframes aparecer{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}
-@keyframes flotarRespirarTilt{0%,50%,100%{transform:translateY(0)rotateX(0)rotateY(0)scale(1)}25%{transform:translateY(-6px)rotateX(2deg)rotateY(-2deg)scale(1.015)}75%{transform:translateY(-6px)rotateX(-2deg)rotateY(2deg)scale(1.015)}}
+@keyframes flotarRespirarTilt{0%,50%,100%{transform:translateY(0) rotateX(0) rotateY(0) scale(1)}25%{transform:translateY(-6px) rotateX(2deg) rotateY(-2deg) scale(1.015)}75%{transform:translateY(-6px) rotateX(-2deg) rotateY(2deg) scale(1.015)}}
 @keyframes pulse{0%,100%{transform:scale(1)}50%{transform:scale(1.08)}}
 </style>
 </head>
@@ -40,22 +39,22 @@ body.dark{background:#000}
 <div class="main">
   <div class="grid" id="gridContainer"></div>
   <div class="footer">
-    <button class="shock hidden" id="shockBtn">📖 <span class="colorful">¡Chócalas!</span></button>
-    <div class="final-message hidden" id="mensajeFinal">✨ <span class="colorful">¡Felicidades!</span> por abrir un nuevo universo. ✨</div>
+    <button class="shock hidden" id="shockBtn">📖 ¡Chócalas!</button>
+    <div class="final-message hidden" id="mensajeFinal">✨ ¡Felicidades por abrir un libro! ✨</div>
     <img src="/trigguiletras.png" class="trigguiletras" id="logoTriggui">
   </div>
 </div>
 
 <script>
 const $=id=>document.getElementById(id),
-nombres=[["Pausa consciente","Respira profundo","Detente y siente","Vacía tu mente","Fluye con ligereza"],["Descubre tu chispa","Explora universos","Lee y transforma","Observa con calma","Inspírate sin miedo"],["Reflexiona en grande","Actúa ahora","Muévete diferente","Sorpréndete siempre","Transforma caminos"],["Siente intensamente","Conecta profundo","Abraza oportunidades","Disfruta intensamente","Vibra altísimo"]],
+nombres=[["Pausa consciente","Respira profundo","Detente y siente","Vacía tu mente","Fluye en calma"],["Descubre la chispa","Explora nuevos mundos","Lee y transforma","Observa atento","Inspírate a diario"],["Reflexiona y actúa","Muévete sin miedo","Sorpréndete siempre","Transforma lo conocido"],["Siente la vibración","Conecta verdadero","Abraza oportunidades","Disfruta la vida","Vibra más alto"]],
 colores=["bg1","bg2","bg3","bg4"],
 libros=[
-{portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1642726660i/60171734.jpg",fondo:"#140038",frases:["🌬️ Respira como quien abre una nueva vida.","🔍 Redescubre maravillas detrás de lo simple.","🧠 Reflexiona cómo cada día construyes eternidades.","💓 Siente la fuerza de vivir conscientemente."]},
-{portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1602574232i/55539565.jpg",fondo:"#001a33",frases:["🌬️ Suelta certezas, ábrete al asombro.","🔍 Replantea todo lo que sabes.","🧠 Despierta en la expansión del desapego.","💓 Vibra desde la renovación interior."]},
-{portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1662270336i/62237986.jpg",fondo:"#33001a",frases:["🌬️ Invita el caos creativo a tu día.","🔍 Explora lo desconocido con arte.","🧠 Crea puentes hacia futuros brillantes.","💓 Late con pasión creadora."]},
-{portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1546097703i/76865.jpg",fondo:"#003300",frases:["🌬️ Cuestiona para evolucionar.","🔍 Traza tu siguiente versión.","🧠 Cultiva visiones audaces.","💓 Eleva tu impulso natural."]},
-{portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1544822311i/43163538.jpg",fondo:"#333300",frases:["🌬️ Sincroniza tu alma con el tiempo.","🔍 Activa tu energía vital.","🧠 Planifica desde el ritmo.","💓 Siente el poder de fluir."]}
+{portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1642726660i/60171734.jpg",fondo:"#140038",frases:["🌬️ Permítete respirar a fondo.","🔍 Encuentra tu chispa interna.","🧠 Reflexiona sobre lo esencial.","💓 Siente el impulso creador."]},
+{portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1602574232i/55539565.jpg",fondo:"#001a33",frases:["🌬️ Libera las certezas limitantes.","🔍 Redefine cada pregunta.","🧠 Expande tu pensamiento.","💓 Vive renovado cada día."]},
+{portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1662270336i/62237986.jpg",fondo:"#33001a",frases:["🌬️ Da paso al caos creador.","🔍 Crea nuevas realidades.","🧠 Invéntate de nuevo.","💓 Siente la expansión."]},
+{portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1546097703i/76865.jpg",fondo:"#003300",frases:["🌬️ Reflexiona: ¿puedo más?","🔍 Encuentra tu grandeza.","🧠 Planea hacia lo alto.","💓 Cosecha tu impulso."]},
+{portada:"https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1544822311i/43163538.jpg",fondo:"#333300",frases:["🌬️ Escucha tu propio ritmo.","🔍 Sincroniza cuerpo y mente.","🧠 Elige tu mejor momento.","💓 Fluye hacia el éxito."]}
 ];
 let libroActual,bloquePortada,revelado=false;
 
